# python_piscine_datasci

./: README.md
ex00/: Hello.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex05/: building.py
ex06/: ft_filter.py
ex08/: Loading.py
py00/ex01/: format_ft_time.py
py00/ex04/: whatis.py
py00/ex06/: filterstring.py
py00/ex07/: sos.py
py00/ex08/: pyproject.toml  tester.py
