[project]
name = "ex08"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Tanawat-J-KMITL",email = "66011255@kmitl.ac.th"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
